--- a/Chap7_Classes.ipynb
+++ b/Chap7_Classes.ipynb
@@ -10,12 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#include <iostream>\n",
@@ -26,11 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//256"
@@ -39,11 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//A class is a user-defined type.\n",
@@ -56,11 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class X{\n",
@@ -81,11 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X var{7} //a variable of type X, initialized to 7"
@@ -94,11 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "int user(X var, X* ptr)\n",
@@ -120,11 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//struct is a class where all the members are public\n",
@@ -143,11 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Date my_birthday;\n"
@@ -156,11 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "void f()\n",
@@ -177,11 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//we must specify the structure name when defining a member function\n",
@@ -206,11 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Date\n",
@@ -228,11 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//member functions can access the variables \n",
@@ -245,11 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//But Non Member functions cannot\n",
@@ -263,11 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//The init() function is now essential because making "
@@ -276,11 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Date dx;"
@@ -289,11 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//dx.m = 3\n",
@@ -303,11 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//redefine Sales_data\n",
@@ -334,11 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//Ex..7.4+7.5\n",
@@ -372,11 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "// Ex7.6-7.7\n",
@@ -398,11 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Persona person_a;"
@@ -411,11 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "person_a.read()"
@@ -432,11 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//The use of functions such as inti() to provide initialization for class objects is inelegant and error-prone. Because it is nowhere stated that an object must be initialized, a programmmer can forget to do so or do so twice\n",
@@ -454,11 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Date today = Date(12,3,2022)"
@@ -467,11 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "today"
@@ -480,11 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//Using default arguments to reduce the number of related functions\n",
@@ -500,11 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Date today{4}"
@@ -513,11 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Date::Date(int dd,int mm, int yy)\n",
@@ -531,11 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//Alternatively, we could use the default values directly as default arguments:\n",
@@ -557,11 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "complex<double> d{1};"
@@ -570,11 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d"
@@ -583,11 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -604,11 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Date d1{15};  //explicit declaration\n",
@@ -623,11 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "c++"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//always recommended to use explicit constructor\n",
@@ -861,27 +729,426 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "cuda-cpp"
-    }
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Employee\n",
+    "{\n",
+    "    private:\n",
+    "        std::string name {};\n",
+    "        int id;\n",
+    "        double wage;\n",
+    "    public:\n",
+    "        void print()\n",
+    "        {\n",
+    "            cout<<\"Emp name: \"<<name<<'\\n'<<\n",
+    "                \"Emp id: \"<<id<<'\\n'<<\n",
+    "                \"salary: \"<<wage<<endl;\n",
+    "        }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Friends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Sales_data {\n",
+    "// friend declarations for nonmember Sales_data operations added\n",
+    "    friend Sales_data add(const Sales_data&, const Sales_data&);\n",
+    "    friend std::istream &read(std::istream&, Sales_data&);\n",
+    "    friend std::ostream &print(std::ostream&, const Sales_data&);\n",
+    "// other members and access specifiers as before\n",
+    "public:\n",
+    "    Sales_data() = default;\n",
+    "    Sales_data(const std::string &s, unsigned n, double p):\n",
+    "        bookNo(s), units_sold(n), revenue(p*n) { }\n",
+    "    Sales_data(const std::string &s): bookNo(s) { }\n",
+    "    Sales_data(std::istream&);\n",
+    "    std::string isbn() const { return bookNo; }\n",
+    "    Sales_data &combine(const Sales_data&);\n",
+    "private:\n",
+    "    std::string bookNo;\n",
+    "    unsigned units_sold = 0;\n",
+    "    double revenue = 0.0;\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Sales_data sales {\"emb\",2,4.5};\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales.isbn()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additional Class Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Screen {\n",
+    "    public: \n",
+    "        using pos = std::string::size_type;\n",
+    "    private:\n",
+    "        pos cursor = 0;\n",
+    "        pos height = 0;\n",
+    "        std::string contents;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Member Function s of class Screen\n",
+    "\n",
+    "\n",
+    "class Screen{\n",
+    "    public:\n",
+    "        using pos = std::string::size_type;\n",
+    "        Screen() = default; //needed because Screen has another constructor\n",
+    "        // cursor initialized to 0 by its in-class initializer\n",
+    "        \n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Member Access"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "struct X {\n",
+    "    void f();\n",
+    "    int m;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "void user(X x, X* px)\n",
+    "{\n",
+    "    m =1; // error: there is no m in scope\n",
+    "    x.m =1 ; //ok\n",
+    "    x->m = 1; //error: X is not a pointer\n",
+    "    px->m = 1; //Ok\n",
+    "    px.m = 1; //error: px is a pointer\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// A member function can refer to the name of a member before it has been declared:\n",
+    "\n",
+    "struct X {\n",
+    "    int f() {return m;} // fine: return this X's m\n",
+    "    int m;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "struct S {\n",
+    "    int m;\n",
+    "    int f();\n",
+    "    static int sm;\n",
+    "};\n",
+    "\n",
+    "\n",
+    "int X::f(){ return m;}\n",
+    "int X::sm {7};\n",
+    "int(S::*) pmf() {&S::f};"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Static Members"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#A variable that is part fo a class yet is not part of an object of that class is #called a static member.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Screen {\n",
+    "    public:\n",
+    "        typedef std::string::size_type pos;\n",
+    "    private:\n",
+    "        pos cursor = 0;\n",
+    "        pos height = 0, width = 0;\n",
+    "        std::string contents;\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Screen X = Screen()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//256"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mutable Data Members"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//A mutable data member is never const, even when it is a member of a const object. Accordingly, a const member function may change a mutable member.As an example we will give Screen a mutable member named access_ctr, which we will us to track how often each Screen member function is called\n",
+    "\n",
+    "\n",
+    "class Screen {\n",
+    "    public:\n",
+    "        void some_member() const;\n",
+    "    private:\n",
+    "        mutable size_t access_ctr;\n",
+    "};\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "void Screen::some_member() const\n",
+    "{\n",
+    "    ++access_ctr; //keep a count of the calls to any member funciton \n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initializers for Data Members of Class Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Sales_data\n",
+    "{\n",
+    "    public:\n",
+    "        string isbn;\n",
+    "        int bookNo;\n",
+    "        int units_sold;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Under the new standard, the best way to specify this default value is as an in-class initializer\n",
+    "\n",
+    "class Window_mgr {\n",
+    "    private:\n",
+    "        //screens this window_mgr is tracking\n",
+    "        // by default a window mgr has one standard sized blank Screen\n",
+    "        std::vector<Screen> screens{Screen(24, 80, ' ')};\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include <istream>\n",
+    "#include <ostream>\n",
+    "#include <iostream>\n",
+    "using namespace std;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "istream &read(istream &is, Sales_data &item)\n",
+    "{\n",
+    "    double price = 0;\n",
+    "    is >> item.bookNo>> item.units_sold >> price;\n",
+    "    item.revenue = price * item.units_sold;\n",
+    "    return is;\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Access Control and Encapsulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Redefining Sales_data once again.\n",
+    "\n",
+    "\n",
+    "class Sales_data {\n",
+    "    public:    //access specifier added\n",
+    "        Sales_data() = default;\n",
+    "        Sales_data(const std::string &s, unsigned n, double p): bookNo(s), units_sold(n), revenue(p*n) {}\n",
+    "        Sales_data(const std::string &s): bookNo(s) {}\n",
+    "        Sales_data(std::istream&);\n",
+    "        std::string isbn() const {return bookNo;}\n",
+    "        Sales_data &combine(const Sales_data&);\n",
+    "    private:\n",
+    "        double avg_price() const\n",
+    "            { return units_sold ? revenue/units_sold : 0;}\n",
+    "        std::string bookNo;\n",
+    "        unsigned units_sold = 0;\n",
+    "        double revenue = 0.0;\n",
+    "};\n",
+    "//The constructors and member functions that are part of the interface follow the public specifier; the data members and the functions that are part of the implementation follow the private specifier.\n",
+    "\n",
+    "//A class may contain zero or more access specifiers and there are no restrictions on how oftern an access specifier may appear. Each access specifier  specifies the access level of the succeeding members. The specified access level reamain in effect until the next access specifier or the end of the class body.d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Sales_data Sales(\"12AJKHKJLB3\")\n",
+    "Sales.isbn()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additional Class Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "C++17",
-   "language": "C++17",
-   "name": "xcpp17"
+   "display_name": "C++14",
+   "language": "C++14",
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
    "file_extension": ".cpp",
    "mimetype": "text/x-c++src",
-   "name": "C++17",
-   "version": "17"
+   "name": "c++",
+   "version": "14"
   },
   "orig_nbformat": 4
  },
