--- a/Chap2_from_2.6.ipynb
+++ b/Chap2_from_2.6.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "0fc03e7b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "#include <iostream>\n",
@@ -15,7 +19,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "24980caf",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -54,7 +62,11 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "2b4d0420",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -125,7 +137,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "6922dce7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -162,7 +178,11 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "2083460b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -208,7 +228,11 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "1ae3b6aa",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -237,23 +261,27 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "796359f8",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "C++14",
+   "language": "C++14",
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
    "file_extension": ".cpp",
    "mimetype": "text/x-c++src",
-   "name": "python",
-   "version": "3.10.9"
+   "name": "C++14",
+   "version": "3.10.10"
   },
   "vscode": {
    "interpreter": {
