--- a/Chap7_Classes.ipynb
+++ b/Chap7_Classes.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,6 +965,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1077,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1128,624 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "//Defining a Type Member\n",
+    "\n",
+    "// A Screen represents a window on a display. Each Screen has a string member that holds the Screen's contents, and three string::size_type members that represent the position of the cursor, and the height and width of the screen.\n",
+    "\n",
+    "//In addition to defining data and function members, class can define its own local names for types. Type names defined by a class are subject  to the same access controls as any othe member and may be either public or private.\n",
+    "\n",
+    "\n",
+    "class Screen {\n",
+    "    public:\n",
+    "        typedef std::string::size_type pos;\n",
+    "    private:\n",
+    "        pos cursor = 0;\n",
+    "        pos height = 0, width = 0;\n",
+    "        std::string contents;\n",
+    "\n",
+    "\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Member Functions of class Screen\n",
+    "\n",
+    "//To make our class more useful we will add a constructor that will let users define hte size and contents fo the screen"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Class Declrations"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Default Arguments and Constructors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include <iostream>\n",
+    "#include <string>\n",
+    "\n",
+    "\n",
+    "class Sales_data {\n",
+    "    public:\n",
+    "        // defines the default constructor as well as one that takes a string argument\n",
+    "        Sales_data(std::string s= \"\") : bookNo(s) {}\n",
+    "        // remaining constructors unchanged\n",
+    "\n",
+    "        Sales_data(std::string s, unsigned cnt, double rev):\n",
+    "            bookNo(s), units_sold(cnt), revenue(rev*cnt) {}\n",
+    "\n",
+    "        Sales_data(std::istream &is) {read(is,  *this);}\n",
+    "\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "struct X {\n",
+    "    int rem, base;\n",
+    "    X (int i, int j): base(i), rem(i % j) { }\n",
+    "    };\n",
+    "\n",
+    "X x(2,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.rem"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Delegation Construction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// As an example, we will rewrite the Sales_data class to use delegating constructors as follows:\n",
+    "\n",
+    "\n",
+    "class Sales_data {\n",
+    "    public:\n",
+    "        //nondelegating constructor initializes members from corresponding arguments\n",
+    "\n",
+    "        Sales_data(std::string s, unsigned cnt, double price):\n",
+    "            bookNo(s), units_sold(cnt), revenue(cnt*price) {}\n",
+    "        \n",
+    "        //remaining constructors all delegate to another constructor\n",
+    "\n",
+    "        Sales_data(): Sales_data(\"\", 0,0){}\n",
+    "        Sales_data(std::string s): Sales_data(s,0,0) {}\n",
+    "        Sales_data(std::istream &is): Sales_data(){read(is, *this;)}\n",
+    "        // other members as before\n",
+    "};"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Concrete Classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "namespace Chrono {\n",
+    "    enum class Month{jan=1,feb,mar,apr,may,jun,jul,aug,sep,oct,nov,dec};\n",
+    "\n",
+    "    class Date {\n",
+    "        public:\n",
+    "            class Bad_date {}; //exception class\n",
+    "            \n",
+    "            explicit Date(int dd = {}, Month mm={}, int yy = {});\n",
+    "\n",
+    "            int day() const;\n",
+    "            Month month() const;\n",
+    "            int year() const;\n",
+    "\n",
+    "\n",
+    "            string string_rep() const;\n",
+    "            void char_rep(char s[], int max) const;   //C-style string representation\n",
+    "\n",
+    "        //modifying functions for changing the Date:\n",
+    "\n",
+    "            Date& add_year(int n);  // add n years\n",
+    "            Date& add_month(int n); // add n months\n",
+    "            Date& add_day(int n); // add n days\n",
+    "        private:\n",
+    "            bool is_valid();\n",
+    "            int d,m,y;\n",
+    "    };\n",
+    "\n",
+    "        bool is_date(int d, Month m, int y);    //true for valid date\n",
+    "        bool is_leap(int y);                    //true if y is a leap year\n",
+    "\n",
+    "\n",
+    "        bool operator==(const Date& a, const Date& b);\n",
+    "        bool operator!=(const Date& a, const Date& b);\n",
+    "\n",
+    "        const Date& default_date();             // teh default date\n",
+    "\n",
+    "\n",
+    "        ostream& operator << (ostream& os, const Date& d);  //print d to os\n",
+    "        istream& operator >> (istream& is, Date& d);        //read Date from is into d\n",
+    "}   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Chrono::Date(1995, Chrono::Month::jul, 27)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using namespace Chrono;\n",
+    "#include <vector>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Member Functions\n",
+    "\n",
+    "\n",
+    "Date::Date(int dd, Month mm, int yy)\n",
+    "    :d{dd}, m{mm}, y{yy}\n",
+    "{\n",
+    "    if(y==0) y = default_date().year();\n",
+    "    if(m == Month{}) m = default_date().month();\n",
+    "    if(d==0) d=default_date().day();\n",
+    "\n",
+    "    if(!is_valid()) throw Bad_date();\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "//54 mins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "void fill(vector<Date>& aa)\n",
+    "{\n",
+    "    while (cin) {\n",
+    "        Date d;\n",
+    "        try {\n",
+    "            cin >> d;\n",
+    "        }\n",
+    "        catch (Date::Bad_date) {\n",
+    "            //....my error handling\n",
+    "            continue;\n",
+    "        }\n",
+    "        aa.push_back(d); //\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "fill({2,2,27}, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inline int Date::day() const\n",
+    "{\n",
+    "    return d;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//implementing the add_month function\n",
+    "\n",
+    "\n",
+    "Date& Date::add_month(int n)\n",
+    "{\n",
+    "    if (n==0) return *this;\n",
+    "\n",
+    "    if (n>0) {\n",
+    "        int delta_y = n/12;\n",
+    "        int mm = static_cast<int>(m)+n%12;\n",
+    "        if(12<mm) {\n",
+    "            ++delta_y;\n",
+    "            mm -= 12;\n",
+    "        }\n",
+    "\n",
+    "        //..handle the cases where the month mm doesnt have day d\n",
+    "\n",
+    "        y += delta_y;\n",
+    "        m = static_cast<Month>(mm);\n",
+    "        return *this;  \n",
+    "    }\n",
+    "\n",
+    "    // ...handle negative n..\n",
+    "\n",
+    "    return *this;\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Helper Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Typically a class has a number of functions associated with it that need not be defined in the class iteself because they dont need direct access to the representation. For example\n",
+    "\n",
+    "\n",
+    "int diff(Date a, Date b);\n",
+    "\n",
+    "\n",
+    "bool is_leapyear(int y);\n",
+    "bool is_date(int d, Month m, int y);\n",
+    "\n",
+    "\n",
+    "const Date& default_date();\n",
+    "Date next_weekday(Date d);\n",
+    "Date next_saturday(Date d);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Users who needed Date would make them all available by including the file that defined the interface.For example:\n",
+    "//#include \"Date.h\"\n",
+    "\n",
+    "\n",
+    "//In addition or alternatively we can make the association explicit by enclosing the class and its helper functions in a namespace\n",
+    "\n",
+    "\n",
+    "namespace Chrono{\n",
+    "\n",
+    "    class Date{/*..*/};\n",
+    "\n",
+    "    int diff(Date a, Date b);\n",
+    "    bool is_leapyear(int y);\n",
+    "    bool is_date(int d, Month m, int y);\n",
+    "    const Date& default_date();\n",
+    "    Date next_weekday(Date d);\n",
+    "    Date next_saturday(Date d);\n",
+    "    //.....\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//constexpr Constructors\n",
+    "\n",
+    "class Debug {\n",
+    "    public:\n",
+    "        constexpr Debug(bool b = true): hw(b),io(b), other(b) {}\n",
+    "        constexpr Debug(bool h, bool i, bool o): hw(h), io(i), other(o) {}\n",
+    "        constexpr bool any() {return hw || io || other;}\n",
+    "        void set_io(bool b) {io = b;}\n",
+    "        void set_hw(bool b) {hw = b;}\n",
+    "        void set_other(bool b) {hw = b;}\n",
+    "    private:\n",
+    "        bool hw; //hardware errors other than IO errors\n",
+    "        bool io; // IO errors\n",
+    "        bool other; // other errors\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "constexpr Debug io_sub(false, true, false);\n",
+    "if (io_sub.any()) // equivalent to if(true)\n",
+    "    cerr << \"print appropriate error messages\"<<endl;\n",
+    "\n",
+    "constexpr Debug prod(false); // no debugging during production\n",
+    "if (prod.any())  // equivalent to if(false)\n",
+    "    cerr << \"print an error message\" << endl;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "static Class Members"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Using a Class static Member\n",
+    "\n",
+    "class Account {\n",
+    "    public:\n",
+    "        void calculate() {amount += amount * interestRate;}\n",
+    "        static double rate() {return interestRate;}\n",
+    "        static void rate (double);\n",
+    "    \n",
+    "    private:\n",
+    "        std::string owner;\n",
+    "        double amount;\n",
+    "        static double interestRate;\n",
+    "        static double initRate();\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IncrementalExecutor::executeFunction: symbol '_ZN11__cling_N587Account12interestRateE' unresolved while linking [cling interface function]!\n",
+      "You are probably missing the definition of __cling_N58::Account::interestRate\n",
+      "Maybe you need to load the corresponding shared library?\n"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "double r;\n",
+    "r = Account::rate();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Account ac1;\n",
+    "Account *ac2 = &ac1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "input_line_17:4:38: error: use of undeclared identifier 'interestRate'\n",
+      "        static double rate() {return interestRate;}\n",
+      "                                     ^\n"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "// Ordinarily, class static members may not be initialized in the class body. How ever, we can provide in class initializers for static members that have const integral tyep and must do so for static members that are constexprs of literal type. The initializers must be constant expressions. Such members are themselves constant expresssions; they can be used where a constant expression is required.\n",
+    "\n",
+    "\n",
+    "class Account {\n",
+    "    public:\n",
+    "        static double rate() {return interestRate;}\n",
+    "        static void rate(double);\n",
+    "\n",
+    "    private:\n",
+    "        static constexpr int period = 30; // period is a const expression\n",
+    "        double daily_tbl[period];\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "input_line_20:3:24: error: definition or redeclaration of 'period' not allowed inside a function\n",
+      "constexpr int Account::period; // initializer provided in the class definition\n",
+      "              ~~~~~~~~~^\n"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "// definition of a static member with no in initializer\n",
+    "\n",
+    "constexpr int Account::period; // initializer provided in the class definition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Another difference between static and ordinary members is that we can use  a static member as a default argument\n",
+    "\n",
+    "\n",
+    "class Screen {\n",
+    "    public:\n",
+    "        // bkground refers to the static member\n",
+    "        // delcared later in the class definition\n",
+    "\n",
+    "        Screen& clear(char = bkground);\n",
+    "    private:\n",
+    "        static const char bkground;\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Example {\n",
+    "    public:\n",
+    "        static constexpr float rate = 6.5;\n",
+    "        static constexpr int vecSize = 20;\n",
+    "        static std::vector<double> vec;\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "input_line_43:2:18: error: definition or redeclaration of 'rate' not allowed inside a function\n",
+      " double Example::rate = 9.9\n",
+      "        ~~~~~~~~~^\n"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "double Example::rate = 9.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IncrementalExecutor::executeFunction: symbol '_ZN12__cling_N5327Example3vecE' unresolved while linking [cling interface function]!\n",
+      "You are probably missing the definition of __cling_N532::Example::vec\n",
+      "Maybe you need to load the corresponding shared library?\n"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "Example::vec"
+   ]
   },
   {
    "cell_type": "code",
